# llamac

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cuda-build.yml  llamars-build.yml
include/: llamac.h  llcml.h
llamac/: CMakeLists.txt
llamac/include/: llamac.h  llamac_config.h  llamac_log.h
llamac/llmclm/src/: matmul.cu
llamac/src/: generate_stub.c  llamac.c  llamac_internal.h  llamac_log.c  llamac_runtime.c
llamacpp/: CMakeLists.txt  build_release.sh  compile_commands.json
llamacpp/llamac/: Makefile  cmake_install.cmake
llamacpp/llamacpp/: Makefile  cmake_install.cmake  llama-config.cmake
llamacpp/llamacpp/ggml/: Makefile  cmake_install.cmake  ggml-config.cmake
llamacpp/llamacpp/ggml/src/: Makefile  cmake_install.cmake
llamacpp/llamacpp/ggml/src/ggml-cpu/: Makefile  cmake_install.cmake
llamacpp/llamacpp/ggml/src/ggml-cuda/: Makefile  cmake_install.cmake
llamacpp/llamacpp/src/: Makefile  cmake_install.cmake
llamacpp/tools/guuf-reader/: Makefile  cmake_install.cmake
llamacpp/tools/llamac-runner/: Makefile  cmake_install.cmake
llamacpp20/: CMakeLists.txt
llamacpp20/ggml/: CMakeLists.txt
llamacpp20/ggml/include/: ggml.h  llamac_sampler.h
llamacpp20/ggml/src/ggml-cuda/include/: common.cuh  mean.cuh  sumrows.cuh  unary.cuh  wkv.cuh
llamacpp20/ggml/src/ggml-cuda/src/: wkv.cu
llamars/: Cargo.toml  README,md  build.rs
llamars/examples/: interactive_chat.rs
llamars/src/: chat_message.rs  lib.rs  llama.rs
llamars/src/llama/: options_builder.rs  runner.rs  types.rs  wrapper.rs
llcml/: CMakeLists.txt
llcml/cuda-kernel/include/: common.cuh  mean.cuh  tsembed.cuh  upscale.cuh  vecdotq.cuh
llcml/cuda-kernel/src/: wkv.cu
llcml/include/: llamac_sampler.h
llcml/include/cuda-kernel/: matmul.h
llcml/llcml-cuda/include/: matmul.cuh  wkv.cuh
llcml/src/cuda-kernel/: matmul.cu
src/: main.c
tools/guuf-reader/: CMakeLists.txt
tools/guuf-reader/include/: gguf_reader.h
tools/guuf-reader/src/: gguf_reader.c  main.c
tools/llamac-runner/: CMakeLists.txt
tools/llamac-runner/src/: main.c
