[package]
name            = "llamars"
version         = "0.0.1"
description     = "llamacpp C based wrapper"
authors         = ["Ervin Bosenbacher <ervin.bosenbacher@rvnllm.com>"]
keywords        = ["LLM", "ML"]
categories      = ["science"]
edition         = "2024"
homepage        = "https://www.rvnllm.com/"
license         = "MIT"
repository      = "https://github.com/rvnllm/rvnllm"
build           = "build.rs"


[dependencies]
libc = "0.2.174"
cmake = "0.1.54"
log = "0.4.1"
anyhow = "1.0.98"

[build-dependencies]
bindgen = {  version = "0.72.0", optional = true }
cc = "1.2.27"
cmake = "0.1.54"
glob = { version = "0.3.2" }
num_cpus = "1.17.0"

[features]
default = []
opencl = []
cuda = []
metal = []
openblas = []
blis = []
generate-bindings = ["bindgen"]

[lib]
#name = "llama_cpp_rs"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "interactive_chat"
##ath = "examples/interactive_chat.rs"

[package.metadata.docs.rs]
features = ["generate-bindings"]

